[gd_scene load_steps=5 format=2]

[ext_resource path="res://level/GUI/AudioMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/img/GUI/Table_01.png" type="Texture" id=2]
[ext_resource path="res://assets/font/StrenuousBL16.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/font/StrenuousBL28.tres" type="DynamicFont" id=4]

[node name="AudioMenu" type="NinePatchRect"]
margin_right = 1600.0
margin_bottom = 896.0
texture = ExtResource( 2 )
patch_margin_left = 29
patch_margin_top = 22
patch_margin_right = 28
patch_margin_bottom = 32
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 109.0
margin_right = 1472.0
margin_bottom = 143.0
size_flags_horizontal = 11
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/MusicVolume"]
margin_right = 206.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Music Volume"
align = 1
valign = 1

[node name="Value" type="Label" parent="VBoxContainer/MusicVolume"]
margin_left = 246.0
margin_right = 292.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "100"
align = 1
valign = 1

[node name="MusicSliderVolume" type="HSlider" parent="VBoxContainer/MusicVolume"]
margin_left = 802.0
margin_top = 9.0
margin_right = 1002.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
step = 5.0
value = 100.0

[node name="EffectVolume" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 366.0
margin_right = 1472.0
margin_bottom = 400.0
size_flags_horizontal = 11
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/EffectVolume"]
margin_right = 217.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Effect Volume"
align = 1
valign = 1

[node name="Value" type="Label" parent="VBoxContainer/EffectVolume"]
margin_left = 257.0
margin_right = 303.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "100"
align = 1
valign = 1

[node name="EffectSliderVolume" type="HSlider" parent="VBoxContainer/EffectVolume"]
margin_left = 807.0
margin_top = 9.0
margin_right = 1007.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
step = 5.0
value = 100.0

[node name="ExitButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 616.0
margin_right = 1472.0
margin_bottom = 666.0
size_flags_horizontal = 11
size_flags_vertical = 6

[node name="SaveButton" type="Button" parent="VBoxContainer/ExitButtons"]
margin_left = 317.0
margin_right = 417.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "Save"

[node name="ExitButton" type="Button" parent="VBoxContainer/ExitButtons"]
margin_left = 1055.0
margin_right = 1155.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "Exit"
[connection signal="value_changed" from="VBoxContainer/MusicVolume/MusicSliderVolume" to="." method="_on_MusicSliderVolume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/EffectVolume/EffectSliderVolume" to="." method="_on_EffectSliderVolume_value_changed"]
[connection signal="pressed" from="VBoxContainer/ExitButtons/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButtons/ExitButton" to="." method="_on_ExitButton_pressed"]
